force-app/main/default/objects/Expenditure__c/Expenditure__c.object-meta.xml
<CustomObject>
    <description>Expenses which were paid off using Salary Balance</description>
    <label>Expenditure</label>
    <nameField>
        <label>Expenditure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenditures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>