force-app/main/default/objects/Expenditure__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describe the detailed version of the Expense occurred</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>