force-app/main/default/objects/Expenditure__c/fields/Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date__c</fullName>
    <description>Displays the date of the expense incurred</description>
    <inlineHelpText>Displays the date of the expense incurred</inlineHelpText>
    <label>Expense Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>